--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,17 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" [routerLink]="['activos']" href="#">View</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="['AddActivos']" href="#">Add</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
+<div class="container">
+  <router-outlet>
+
+  </router-outlet>
+</div>
