--- a/src/app/Components/Empleados/view-empleados/view-empleados.component.html
+++ b/src/app/Components/Empleados/view-empleados/view-empleados.component.html
@@ -12,7 +12,7 @@
     <tbody class="table-group-divider">
       <tr class="table-active" *ngFor="let empleado of empleados">
         <td>
-          {{empleado._id}}
+          {{empleado.empleadoId}}
         </td>
         <td>
           {{empleado.nombre}}
