--- a/src/app/Components/Activos-Fijos/view-activos/view-activos.component.html
+++ b/src/app/Components/Activos-Fijos/view-activos/view-activos.component.html
@@ -1,3 +1,5 @@
+<a style="margin-top: 20px;" class="btn btn-primary" aria-current="page" [routerLink]="['/AddActivos']" >Crear nuevo</a>
+
 <table  class="table  mt-5 col-10">
   <thead>
     <th>#</th>
