--- a/src/app/Components/Activos-Fijos/add-activos/add-activos.component.html
+++ b/src/app/Components/Activos-Fijos/add-activos/add-activos.component.html
@@ -1,51 +1,45 @@
 <div class="container d-flex justify-content-center">
   <div class="form">
-    <form action="">
-
+    <form #activos="ngForm" (ngSubmit)="onSubmit(activos)">
       <div class="title">Añadir activo fijo</div>
       <div class="subtitle">Complete todos los campos!!</div>
       <div class="input-container ic1">
-        <input id="Descripcion" class="input" type="text" placeholder="" />
+        <input id="descripcion" #descripcion="ngModel" [(ngModel)]="activo.descripcion" name="descripcion" class="input" type="text" />
         <div class="cut text-center">Descripcion</div>
-
       </div>
       <div class="input-container ic1">
-        <select class="input" name="" id="">
-          <option value="{{dep._id}}" *ngFor="let dep of departamento">{{dep.descripcion}}</option>
+        <select  class="input" id="departamentoId" #departamentoId="ngModel" [(ngModel)]="activo.departamentoId" name="departamentoId">
+          <option *ngFor="let dep of departamento" >{{dep.descripcion}}</option>
         </select>
         <div class="cut text-center">departamento</div>
 
       </div>
       <div class="input-container ic1">
-        <select class="input" name="" id="">
-          <option value="{{tip._id}}" *ngFor="let tip of tipo" >{{tip.descripcion}}</option>
+        <select  class="input" id="tipoActivoId" #tipoActivoId="ngModel" [(ngModel)]="activo.tipoActivoId" name="tipoActivoId">
+          <option *ngFor="let tip of tipo" >{{tip.descripcion}}</option>
         </select>
         <div class="cut text-center">Tipo activo</div>
-
       </div>
       <div class="input-container ic1">
-        <input id="Descripcion" class="input" type="date" placeholder="" />
+        <input  id="fechaRegistro" class="input" type="date" placeholder="" id="fechaRegistro" #fechaRegistro="ngModel" [(ngModel)]="activo.fechaRegistro" name="fechaRegistro" />
         <div class="cut text-center">Fecha</div>
-
       </div>
       <div class="input-container ic1">
-        <input id="Descripcion" class="input" type="number" placeholder="" />
+        <input id="valorCompra" class="input" type="number" placeholder="" id="valorCompra" #valorCompra="ngModel" [(ngModel)]="activo.valorCompra" name="valorCompra"/>
         <div class="cut text-center">Valor compra</div>
-
       </div>
       <div class="input-container ic1">
-        <input id="Descripcion" class="input" type="number" placeholder="" />
+        <input  id="depreciacionAcumulada" class="input" type="number" placeholder="" id="depreciacionAcumulada" #depreciacionAcumulada="ngModel" [(ngModel)]="activo.depreciacionAcumulada" name="depreciacionAcumulada"/>
         <div class="cut text-center">Depreciacion</div>
-
       </div>
-      <div class="input-container ic1">
-        <select class="input" name="" id="">
+     <!--  <div class="input-container ic1">
+        <select class="input" name="" id="" id="descripcion" #descripcion="ngModel" [(ngModel)]="activo.descripcion">
           <option value="1" >Activo</option>
           <option value="0" >Inactivo</option>
         </select>
         <div class="cut text-center">Estado</div>
-      </div>
-      <button type="text" class="submit">submit</button>
+      </div> -->
+      <button type="submit" class="submit">submit</button>
     </form>
   </div>
 </div>
