--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" [routerLink]="['empleados']" href="#">Empleados</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="['depreciacion']" href="#">Calculo Depreciacion</a>
+        </li>
       </ul>
     </div>
 </nav>
