--- a/src/app/Components/Activos-Fijos/add-activos/add-activos.component.html
+++ b/src/app/Components/Activos-Fijos/add-activos/add-activos.component.html
@@ -1,52 +1,56 @@
-<div class="modal fade" id="{{'modalForm'}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="{{'modalForm'}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header d-flex flex-column ">
-<div class="container d-flex justify-content-center">
-  <div class="form">
-    <form [formGroup]="form" class="row" (ngSubmit)="onSubmit()">
-      <div class="title col-12">Activo fijo</div>
-      <div class="input-container ic1 col-6">
-        <input id="descripcion" formControlName="descripcion" name="descripcion" class="input" type="text" />
-        <div class="cut text-center">Descripcion</div>
-      </div>
-      <div class="input-container ic1 col-6">
-        <select  class="input" id="departamentoId" formControlName="departamentoId" name="departamentoId">
-          <option *ngFor="let dep of departamento" [value]="dep.departamentoId">{{dep.descripcion}}</option>
-        </select>
-        <div class="cut text-center">departamento</div>
+        <div class="container d-flex justify-content-center">
+          <div class="form">
+            <form [formGroup]="form" class="row" (ngSubmit)="onSubmit()">
+              <div class="title col-12">Activo fijo</div>
+              <div class="input-container ic1 col-6">
+                <input id="descripcion" formControlName="descripcion" name="descripcion" class="input" type="text" />
+                <div class="cut text-center">Descripcion</div>
+              </div>
+              <div class="input-container ic1 col-6">
+                <select class="input" id="departamentoId" formControlName="departamentoId" name="departamentoId">
+                  <option *ngFor="let dep of departamento" [value]="dep.departamentoId">{{dep.descripcion}}</option>
+                </select>
+                <div class="cut text-center">departamento</div>
 
-      </div>
-      <div class="input-container ic1 col-6">
-        <select  class="input" id="tipoActivoId" formControlName="tipoActivoId" name="tipoActivoId">
-          <option *ngFor="let tip of tipo" [value]="tip.tipoActivoId">{{tip.descripcion}}</option>
-        </select>
-        <div class="cut text-center">Tipo activo</div>
-      </div>
-      <div class="input-container ic1 col-6">
-        <input  id="fechaRegistro" class="input" type="date" placeholder="" formControlName="fechaRegistro" name="fechaRegistro" />
-        <div class="cut text-center">Fecha</div>
-      </div>
-      <div class="input-container ic1 col-12">
-        <input id="valorCompra" class="input" type="number" placeholder=""  formControlName="valorCompra" name="valorCompra"/>
-        <div class="cut text-center">Valor compra</div>
-      </div>
-      <div class="input-container ic1 col-12">
-        <input  id="depreciacionAcumulada" class="input" type="number" placeholder=""  formControlName="depreciacionAcumulada" name="depreciacionAcumulada"/>
-        <div class="cut text-center">Depreciacion</div>
-      </div>
-     <!--  <div class="input-container ic1">
+              </div>
+              <div class="input-container ic1 col-6">
+                <select class="input" id="tipoActivoId" formControlName="tipoActivoId" name="tipoActivoId">
+                  <option *ngFor="let tip of tipo" [value]="tip.tipoActivoId">{{tip.descripcion}}</option>
+                </select>
+                <div class="cut text-center">Tipo activo</div>
+              </div>
+              <div class="input-container ic1 col-6">
+                <input id="fechaRegistro" class="input" type="date" placeholder="" formControlName="fechaRegistro"
+                  name="fechaRegistro" />
+                <div class="cut text-center">Fecha</div>
+              </div>
+              <div class="input-container ic1 col-12">
+                <input id="valorCompra" class="input" type="number" placeholder="" formControlName="valorCompra"
+                  name="valorCompra" />
+                <div class="cut text-center">Valor compra</div>
+              </div>
+              <div class="input-container ic1 col-12">
+                <input id="depreciacionAcumulada" class="input" type="number" placeholder=""
+                  formControlName="depreciacionAcumulada" name="depreciacionAcumulada" />
+                <div class="cut text-center">Depreciacion</div>
+              </div>
+              <!--  <div class="input-container ic1">
         <select class="input" name="" id="" id="descripcion" #descripcion="ngModel" [(ngModel)]="activo.descripcion">
           <option value="1" >Activo</option>
           <option value="0" >Inactivo</option>
         </select>
         <div class="cut text-center">Estado</div>
       </div> -->
-      <button type="submit" class="submit" *ngIf="this.inView === false">Guardar</button>
-    </form>
+              <button type="submit" class="submit" *ngIf="this.inView === false">Guardar</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
-</div>
-</div>
-</div>
 </div>
