Tabla dinamica arreglado

--- a/src/app/Components/Reutilizables/Tabla/tabla.component.html
+++ b/src/app/Components/Reutilizables/Tabla/tabla.component.html
@@ -3,15 +3,15 @@
     <thead>
       <th *ngFor="let item of headers">{{item}}</th>
     </thead>
-    <tbody class="table-group-divider">
+    <tbody class="">
       <tr class="table-active" *ngFor="let item of body">
         <td *ngFor="let item2 of names">
           {{item[item2]}}
         </td>     
         <td>
-          <a (click)="Ver(item.activoFijoId)" type="button" data-toggle="modal" class="btn btn-primary  mr-1" [attr.data-target]="'#modalForm'"><fa-icon [icon]="faEye"></fa-icon></a>
-          <a (click)="Editar(item.activoFijoId)" type="button" data-toggle="modal" class="btn btn-warning  mr-1" [attr.data-target]="'#modalForm'"><fa-icon [icon]="faPenToSquare"></fa-icon></a>
-          <a (click)="borrar(item.activoFijoId)" type="button" data-toggle="modal" class="btn btn-danger "><fa-icon [icon]="faTrash"></fa-icon></a>
+          <a (click)="Ver(item[names[0]])" type="button" data-toggle="modal" class="btn btn-primary  mr-1" [attr.data-target]="'#modalForm'"><fa-icon [icon]="faEye"></fa-icon></a>
+          <a (click)="Editar(item[names[0]])" type="button" data-toggle="modal" class="btn btn-warning  mr-1" [attr.data-target]="'#modalForm'"><fa-icon [icon]="faPenToSquare"></fa-icon></a>
+          <a (click)="borrar(item[names[0]])" type="button" data-toggle="modal" class="btn btn-danger "><fa-icon [icon]="faTrash"></fa-icon></a>
         </td>
       </tr>
     </tbody>
