--- a/src/app/Components/Empleados/add-empleado/add-empleado.component.html
+++ b/src/app/Components/Empleados/add-empleado/add-empleado.component.html
@@ -3,6 +3,9 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header d-flex flex-column ">
+        <div class="modal-header" hidden>
+          <button type="button" #closebutton class="close" data-dismiss="modal">&times;</button>
+        </div>
         <div class="container d-flex justify-content-center">
           <div class="form">
             <form [formGroup]="form" class="row" (ngSubmit)="onSubmit()">
@@ -29,8 +32,8 @@
               </div>
               <div class="input-container ic1 col-6">
                 <select class="input" id="estado" formControlName="estado" name="estado">
-                  <option  [value]="activo">Activo</option>
-                  <option  [value]="inactivo">Inactivo</option>
+                  <option  [ngValue]="true">Activo</option>
+                  <option  [ngValue]="false">Inactivo</option>
                 </select>
                 <div class="cut text-center">Estado</div>
               </div>
