--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" [routerLink]="['depreciacion']" href="#">Calculo Depreciacion</a>
         </li>
+        <a class="nav-link active" aria-current="page" [routerLink]="['cuentas']" href="#">Cuentas</a>
       </ul>
     </div>
 </nav>
