--- a/src/app/Components/Cuentas/add-cuentas/add-cuentas.component.html
+++ b/src/app/Components/Cuentas/add-cuentas/add-cuentas.component.html
@@ -1,1 +1,28 @@
-<p>add-cuentas works!</p>
+<div class="modal fade" id="{{'modalForm'}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header d-flex flex-column ">
+        <div class="container d-flex justify-content-center">
+          <div class="form">
+            <form [formGroup]="form" class="row" (ngSubmit)="onSubmit()">
+              <div class="title col-12">Activo fijo</div>
+              <div class="input-container ic1 col-6">
+                <input id="descripcion" formControlName="descripcion" name="descripcion" class="input" type="text" />
+                <div class="cut text-center">Descripcion</div>
+              </div>
+              <div class="input-container ic1 col-6">
+                <select class="input" id="estado" formControlName="estado" name="estado">
+                  <option  [ngValue]="true">Activo</option>
+                  <option  [ngValue]="false">Inactivo</option>
+                </select>
+                <div class="cut text-center">Estado</div>
+              </div>
+              <button type="submit" class="submit" *ngIf="this.inView === false">Guardar</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
