Mantenimiento de Tipo activos y otros arreglos generales

--- a/src/app/Components/CalculoDepreciacion/add-calculo-depreciacion/add-calculo-depreciacion.component.html
+++ b/src/app/Components/CalculoDepreciacion/add-calculo-depreciacion/add-calculo-depreciacion.component.html
@@ -3,44 +3,50 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header d-flex flex-column ">
+        <div class="modal-header" hidden>
+          <button type="button" #closebutton class="close" data-dismiss="modal">&times;</button>
+        </div>
         <div class="container d-flex justify-content-center">
           <div class="form">
             <form [formGroup]="form" class="row" (ngSubmit)="onSubmit()">
               <div class="title col-12">Calculo Depreciacion</div>
               <div class="input-container ic1 col-6">
                 <input id="añoProceso" formControlName="añoProceso" name="añoProceso" class="input" type="number" />
-                <div class="cut text-center">año Proceso</div>
+                <div class="cut text-center">Año Proceso</div>
               </div>
               <div class="input-container ic1 col-6">
                 <input id="mesProceso" formControlName="mesProceso" name="mesProceso" class="input" type="number" />
-                <div class="cut text-center">mes Proceso</div>
+                <div class="cut text-center">Mes Proceso</div>
               </div>
               <div class="input-container ic1 col-6">
                 <select class="input" id="activoFijoId" formControlName="activoFijoId" name="activoFijoId">
                   <option *ngFor="let activo of activosFijo " [value]="activo.activoFijoId">{{activo.descripcion}}
                   </option>
                 </select>
-                <div class="cut text-center">activo fijo</div>
+                <div class="cut text-center">Activo fijo</div>
               </div>
               <div class="input-container ic1 col-6">
                 <input id="fechaProceso" class="input" type="date" placeholder="" formControlName="fechaProceso"
                   name="fechaProceso" />
-                <div class="cut text-center">fecha Proceso</div>
+                <div class="cut text-center">Fecha Proceso</div>
               </div>
               <div class="input-container ic1 col-12">
                 <input id="montoDepreciado" class="input" type="number" placeholder="" formControlName="montoDepreciado"
                   name="montoDepreciado" />
                 <div class="cut text-center">Monto depreciacion</div>
               </div>
-              <div class="input-container ic1 col-12">
-                <input id="cuentaCompra" class="input" type="number" placeholder="" formControlName="cuentaCompra"
-                  name="cuentaCompra" />
-                <div class="cut text-center">cuenta compra</div>
+              <div class="input-container ic1 col-6">
+                <select class="input" id="cuentaCompra" formControlName="cuentaCompra" name="cuentaCompra">
+                  <option *ngFor="let cuenta of Cuentas" [value]="cuenta.cuentaId">{{cuenta.descripcion}}</option>
+                </select>
+                <div class="cut text-center">Compra</div>
               </div>
-              <div class="input-container ic1 col-12">
-                <input id="cuentaDepreciacion" class="input" type="number" placeholder=""
-                  formControlName="cuentaDepreciacion" name="cuentaDepreciacion" />
-                <div class="cut text-center">Cuenta depreciacion</div>
+
+              <div class="input-container ic1 col-6">
+                <select class="input" id="cuentaDepreciacion" formControlName="cuentaDepreciacion" name="cuentaDepreciacion">
+                    <option *ngFor="let cuenta of Cuentas" [value]="cuenta.cuentaId">{{cuenta.descripcion}}</option>                    
+                </select>
+                <div class="cut text-center">Depreciacion</div>
               </div>
               <button type="submit" class="submit" *ngIf="this.inView === false">Guardar</button>
             </form>
