--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,9 @@
         <li>
           <a class="nav-link active" aria-current="page" [routerLink]="['Departamentos']" href="#">Departamentos</a>
         </li>
-        
+        <li>
+          <a class="nav-link active" aria-current="page" [routerLink]="['TipoActivos']" href="#">Tipos Activos</a>
+        </li>
       </ul>
     </div>
 </nav>
