--- a/src/app/Components/Cuentas/view-cuentas/view-cuentas.component.html
+++ b/src/app/Components/Cuentas/view-cuentas/view-cuentas.component.html
@@ -2,7 +2,7 @@
 <button (click)="CreateMode()" class="btn btn-outline-primary m-1" type="" data-toggle="modal"
   [attr.data-target]="'#modalForm'">Crear nuevo</button>
 
-<app-tabla [body]="ceuntas" [headers]="[
+<app-tabla [body]="cuentas" [headers]="[
 '#',
 'descripcion',
 'estado',
