--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,9 @@
         <li>
           <a class="nav-link active" aria-current="page" [routerLink]="['TipoActivos']" href="#">Tipos Activos</a>
         </li>
+        <li>
+          <a class="nav-link active" aria-current="page" [routerLink]="['TipoPersonas']" href="#">Tipos Personas</a>
+        </li>
       </ul>
     </div>
 </nav>
